# pgde

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
pgde_derive/: Cargo.toml  LICENSE  README.md
pgde_derive/src/: lib.rs
src/: lib.rs
tests/: consume.rs  conversion.rs
