[package]
name = "pgde"
version = "0.2.0"
authors = ["Paul Caruso <crusopaul@gmail.com>"]
license = "MIT"
edition = "2021"
homepage = "https://github.com/crusopaul/pgde/"
repository = "https://github.com/crusopaul/pgde/"
description = "A macro library for consuming PostgreSQL row data into structs."
readme = "README.md"
keywords = ["postgresql"]

[features]
consume_json = ["serde", "serde_json"]
json = ["serde_json", "tokio-postgres/with-serde_json-1"]
uuid = ["dep:uuid", "tokio-postgres/with-uuid-1"]

[dependencies]
pgde_derive = { version = "0.1.0" }
serde = { version = "1.0.0", optional = true }
serde_json = { version = "1.0.0", optional = true }
tokio-postgres = { version = "0.7.0" }
uuid = { version = "1.8.0", optional = true }

[dev-dependencies]
tokio = { version = "1.38.0", features = ["full"] }