[package]
name = "pgde"
version = "0.7.0"
authors = ["Paul Caruso <crusopaul@gmail.com>"]
license = "MIT"
edition = "2021"
repository = "https://github.com/crusopaul/pgde/"
description = "A macro library for consuming PostgreSQL row data into structs."
readme = "README.md"
categories = [ "api-bindings", "development-tools::ffi", "rust-patterns" ]
keywords = ["postgresql"]

[lib]
doctest = false

[features]
bit_0_6 = ["dep:bit-vec_0_6", "tokio-postgres/with-bit-vec-0_6"]
bit_0_7 = ["dep:bit-vec_0_7", "tokio-postgres/with-bit-vec-0_7"]
bit_0_8 = ["dep:bit-vec_0_8", "tokio-postgres/with-bit-vec-0_8"]
chrono_0_4 = ["dep:chrono_0_4", "tokio-postgres/with-chrono-0_4"]
consume_json_1 = ["dep:serde_1", "dep:serde_json_1"]
geo_0_7 = ["dep:geo-types_0_7", "tokio-postgres/with-geo-types-0_7"]
mac_1 = ["dep:eui48_1", "tokio-postgres/with-eui48-1"]
json_1 = ["dep:serde_json_1", "tokio-postgres/with-serde_json-1"]
time_0_3 = ["dep:time_0_3", "tokio-postgres/with-time-0_3"]
uuid_1 = ["dep:uuid_1", "tokio-postgres/with-uuid-1"]

[dependencies]
bit-vec_0_6 = { package = "bit-vec", version = "0.6", optional = true }
bit-vec_0_7 = { package = "bit-vec", version = "0.7", optional = true }
bit-vec_0_8 = { package = "bit-vec", version = "0.8", optional = true }
chrono_0_4 = { package = "chrono", version = "0.4", optional = true }
eui48_1 = { package = "eui48", version = "1.1", optional = true }
geo-types_0_7 = { package = "geo-types", version = "0.7", optional = true }
pgde_derive = { version = "0.2" }
serde_1 = { package = "serde", version = "1.0", features = ["derive"], optional = true }
serde_json_1 = { package = "serde_json", version = "1.0", optional = true }
time_0_3 = { package = "time", version = "0.3", optional = true }
tokio-postgres = { version = "0.7" }
uuid_1 = { package = "uuid", version = "1.0", features = ["v4"], optional = true }

[dev-dependencies]
time_0_3 = { package = "time", version = "0.3", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-test = { version = "0.4" }