[package]
name = "pgde_derive"
version = "0.1.0"
authors = ["Paul Caruso <crusopaul@gmail.com>"]
license = "MIT"
edition = "2021"
publish = false
homepage = "https://github.com/crusopaul/pgde/"
repository = "https://github.com/crusopaul/pgde/"
description = "A macro library for consuming PostgreSQL row data into structs."
readme = "README.md"
keywords = ["postgresql"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.0"
quote = "1.0.0"
syn = "2.0.0"