[package]
name = "pgde_derive"
version = "0.2.1"
authors = ["Paul Caruso <crusopaul@gmail.com>"]
license = "MIT"
edition = "2021"
repository = "https://github.com/crusopaul/pgde/"
description = "A macro library for consuming PostgreSQL row data into structs."
readme = "README.md"
categories = [ "api-bindings", "development-tools::ffi", "rust-patterns" ]
keywords = ["postgresql"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"