[package]
name = "pgde_derive"
version = "0.2.2"
authors = ["Paul Caruso <crusopaul@gmail.com>"]
license = "MIT"
edition = "2021"
repository = "https://github.com/crusopaul/pgde/"
description = "A macro library for consuming PostgreSQL row data into structs."
readme = "README.md"
categories = [ "api-bindings", "development-tools::ffi", "rust-patterns" ]
keywords = ["postgresql"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"